# ChangeLog for genkernel
# Copyright 2006-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_initramfs.sh:
  Fixed lib64 link for bug #168664.

  09 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> x86/kernel-config-2.6:
  Update default kernel config with the current LiveCD config for 2007.0,
  which is built on 2.6.19, rather than 2.6.17 only.

  07 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  +pkg/module-init-tools-0.9.15-pre4.tar.bz2,
  +pkg/busybox-1.1.3+gentoo.tar.bz2,
  +pkg/devfsd-1.3.25-dietlibc-kernel25.tar.bz2,
  +pkg/modutils-2.4.26.tar.bz2:
  Added binary files back and updated busybox with a patch from Peter
  Alfredsen <peter.alfredsen@gmail.com> in bug #168599.

  07 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  -pkg/module-init-tools-0.9.15-pre4.tar.bz2,
  -pkg/busybox-1.1.3+gentoo.tar.bz2,
  -pkg/devfsd-1.3.25-dietlibc-kernel25.tar.bz2,
  -pkg/modutils-2.4.26.tar.bz2:
  Removing binary files from pkg since they were corrupted during the CVS->SVN
  migration.

  07 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> genkernel.8:
  Fixed up the man page for bug #168500 and bug #168719.

  14 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org> genkernel,
  parisc/config.sh, parisc64/config.sh:
  Moved the MAKEOPTS check to the top of the file for parisc, so it matches
  other architectures. This fixes bug #165494. Thanks to Andrew Gaffney
  <agaffney@gentoo.org> for finding the fix. I'm marking this as 3.4.7_pre3
  for testing.

  14 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts:
  Adding yet another patch from Fabio Erculiani <lxnay@lxnaydesign.net> from
  bug #152945.

  12 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  generic/initrd.scripts, generic/linuxrc, genkernel:
  Added a non-braindead version of a patch provided by Fabio Erculiani
  <lxnay@lxnaydesign.net> in bug #160333. This is completely untested, so I'm