@@ -88,13 +88,21 @@ gen_kerncache()
 
 gen_kerncache_extract_kernel()
 {
-       	/bin/tar -f ${KERNCACHE} -C ${TEMP} -xj 
-	cp "${TEMP}/kernel-${ARCH}-${KV}" "${BOOTDIR}/kernel-${KNAME}-${ARCH}-${KV}" || gen_die "Could not copy the kernel binary to ${BOOTDIR}!"
+    /bin/tar -f ${KERNCACHE} -C ${TEMP} -xj 
+	copy_image_with_preserve "kernel" \
+		"${TEMP}/kernel-${ARCH}-${KV}" \
+		"kernel-${KNAME}-${ARCH}-${KV}"
+
 	if [ "${KERNEL_BINARY_2}" != '' -a "${GENERATE_Z_IMAGE}" = '1' ]
-        then
-		cp "${TEMP}/kernelz-${ARCH}-${KV}" "${BOOTDIR}/kernelz-${KNAME}-${ARCH}-${KV}" || gen_die "Could not copy the kernel binary to ${BOOTDIR}!"
-        fi
-        cp "${TEMP}/System.map-${ARCH}-${KV}" "${BOOTDIR}/System.map-${KNAME}-${ARCH}-${KV}" || gen_die "Could not copy System.map to ${BOOTDIR}!"
+    then
+		copy_image_with_preserve "kernelz" \
+			"${TEMP}/kernelz-${ARCH}-${KV}" \
+			"kernelz-${KNAME}-${ARCH}-${KV}"
+    fi
+    
+	copy_image_with_preserve "System.map" \
+		"${TEMP}/System.map-${ARCH}-${KV}" \
+		"System.map-${KNAME}-${ARCH}-${KV}"
 }
 
 gen_kerncache_extract_modules()
