@@ -2,6 +2,13 @@
 # Copyright 2006-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_compile.sh,
+  gen_determineargs.sh, gen_funcs.sh, gen_initramfs.sh, gen_initrd.sh,
+  gen_package.sh, genkernel:
+  Added a patch by John R. Graham <john_r_graham@mindspring.com> from bug
+  #169383 to improve the --symlink option fairly significantly. This is going
+  to be 3.4.7_pre4 and while I haven't tested this yet, it looks good.
+
   09 Mar 2007; Chris Gianelloni <wolf31o2@gentoo.org> gen_initramfs.sh:
   Fixed lib64 link for bug #168664.
 
